--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -19,6 +19,7 @@ h2 {
 
 body {
     height: 100vh;
+    display: flex;
 }
 
 /* left-side */
@@ -36,4 +37,51 @@ body {
 
 .left-side article {
     text-align: justify;
+}
+
+/* Main Body */
+
+.main-body {
+    display: flex;
+    flex: 1;
+    padding-top: 16px;
+    justify-content: center;
+}
+
+/* Game Method */
+
+.game-method {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.game-method .title {
+    text-transform: uppercase;
+    margin-bottom: 16px;
+}
+
+.method-button {
+    display: flex;
+    column-gap: 16px;
+}
+
+.method-button button {
+    padding: 8px 16px;
+    border: 0;
+    border-radius: 4px;
+    border: 1px solid #583ed5;
+    background-color: #583ed5;
+    color: white;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.method-button button:hover {
+    background-color: white;
+    color: black;
+}
+
+.method-button button:active {
+    transform: scale(0.9);
 }
