--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -11,7 +11,7 @@
 }
 
 body,
-h1, 
+h1,
 h2 {
     margin: 0;
     padding: 0;
@@ -20,6 +20,40 @@ h2 {
 body {
     height: 100vh;
     display: flex;
+}
+
+button {
+    padding: 8px 16px;
+    border: 0;
+    border-radius: 4px;
+    border: 1px solid #583ed5;
+    background-color: #583ed5;
+    color: white;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+button:hover {
+    background-color: white;
+    color: black;
+}
+
+button:active {
+    transform: scale(0.9);
+}
+
+button.back-btn {
+    border: 1px solid hsl(0, 64%, 54%);
+    background-color: hsl(0, 64%, 54%);
+}
+
+button.back-btn:hover {
+    background-color: white;
+    color: black;
+}
+
+button.back-btn:active {
+    transform: scale(0.9);
 }
 
 /* left-side */
@@ -66,22 +100,22 @@ body {
     column-gap: 16px;
 }
 
-.method-button button {
-    padding: 8px 16px;
-    border: 0;
+/* Chosse Name */
+
+.name-input-cont input {
     border-radius: 4px;
     border: 1px solid #583ed5;
-    background-color: #583ed5;
-    color: white;
-    text-transform: uppercase;
-    font-weight: bold;
+    padding: 4px 16px 4px 4px;
 }
 
-.method-button button:hover {
-    background-color: white;
-    color: black;
+.name-input-cont {
+    display: flex;
+    flex-direction: column;
+    row-gap: 6px;
 }
 
-.method-button button:active {
-    transform: scale(0.9);
+.insert-name {
+    display: flex;
+    flex-direction: column;
+    row-gap: 16px;
 }
